--- a/src/app/page/home/home.css
+++ b/src/app/page/home/home.css
@@ -1,19 +1,31 @@
 .home {
-    text-align: center;
-    padding: 50px;
-  }
-  
-  .home h1 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-  }
-  
-  .home p {
-    font-size: 1.2em;
-    color: #555;
-  }
-  
-  .home .btn {
-    margin-top: 20px;
-  }
-  
+  text-align: center;
+  padding: 50px 20px;
+  background-color: #2c2c2c;
+  border-bottom: 2px solid #e50914;
+}
+
+.home h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.home p {
+  font-size: 1.2rem;
+  margin-bottom: 30px;
+  color: #bbb;
+}
+
+.home .btn {
+  padding: 15px 25px;
+  font-size: 1.2rem;
+  background-color: #e50914;
+  border: none;
+  border-radius: 5px;
+}
+
+.home .btn:hover {
+  background-color: #f40612;
+}
