--- a/src/app/page/home/home.html
+++ b/src/app/page/home/home.html
@@ -1,5 +1,5 @@
 <div class="home">
-    <h1>Bem-vindo ao Catálogo de Filmes!</h1>
+    <h1>Bem-vindo ao Catálogo de Filmes Populares!</h1>
     <p>Descubra os melhores filmes e suas informações detalhadas.</p>
     <a routerLink="listagem" class="btn btn-primary">Explorar Filmes</a>
   </div>
