--- a/src/app/page/home/home.css
+++ b/src/app/page/home/home.css
@@ -1,8 +1,8 @@
 .home {
   text-align: center;
-  padding: 50px 20px;
-  background-color: #2c2c2c;
-  border-bottom: 2px solid #e50914;
+  padding: 381px 20px;
+  background-color: #1a1a1a;
+  border-bottom: 2px solid #09d9f5;
 }
 
 .home h1 {
@@ -21,11 +21,11 @@
 .home .btn {
   padding: 15px 25px;
   font-size: 1.2rem;
-  background-color: #e50914;
+  background-color: #007bff;
   border: none;
   border-radius: 5px;
 }
 
 .home .btn:hover {
-  background-color: #f40612;
+  background-color: #0056b3;
 }
